feat: add status
